Fix https://github.com/Orange-OpenSource/Orange-Boosted-Bootstrap/pull/1241#discussion_r868155904, Reintroduce title bars + realign text below

--- a/site/assets/scss/_layout.scss
+++ b/site/assets/scss/_layout.scss
@@ -4,7 +4,11 @@
 ///////////////////////////////////////////////
 ///////////////////////////////////////////////
 .bd-gutter {
-  --bs-gutter-x: #{$bd-gutter-x};
+  --bs-gutter-x: #{$bd-gutter-x * 2};
+
+  @include media-breakpoint-up(md) {
+    --bs-gutter-x: #{$bd-gutter-x * 4};
+  }
 }
 
 .bd-layout {
